--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "tailwindcss": "^3.3.2",
+    "use-selectify": "^0.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
