--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
+    "jquery": "^3.7.0",
+    "jquery-mask-plugin": "^1.14.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.11.2",
-    "tailwindcss": "^3.3.2",
-    "use-selectify": "^0.4.0"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
