--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.2",
+    "@mui/material": "^5.13.5",
+    "@mui/styled-engine-sc": "^5.12.0",
     "jquery": "^3.7.0",
     "jquery-mask-plugin": "^1.14.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.11.2",
+    "styled-components": "^5.3.11",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
